--- a/index.html
+++ b/index.html
@@ -182,8 +182,11 @@
 				</div>   
 			</li> 
 		</ul>		
-		
+		<button id="getData"> AJAX </button>
 		<footer>			
 		</footer>
+		
+		<script type='text/javascript' src="js/zepto.min.js"></script>
+		<script type='text/javascript' src="js/scripts.js"></script>		
 	</body>
 </html>
