--- a/index.html
+++ b/index.html
@@ -181,8 +181,15 @@
 					</div>   
 				</div>   
 			</li> 
-		</ul>		
-		<button id="getData"> AJAX </button>
+		</ul>	
+		
+		<div id="getData" class="actions" style="background-color:#fff;">    
+			<a href="/match/2015/3" class="highlightBtn matchCentre">Get details</a>
+			<div>
+				<a href="">></a>
+			</div>
+		</div>
+		
 		<footer>			
 		</footer>
 		
